# voxlan

./: Cargo.toml  Dockerfile  LICENSE  README.md  \
.github/workflows/: cd.yaml  rust.yaml  rust.yml
scripts/: install.sh  uninstall.sh
src/: animation.rs  args.rs  client.rs  connect.rs  host.rs  main.rs  net.rs  proxy.rs  temp.rs  temp2.rs
