[package]
name = "voxlan"
version = "1.3.1"
edition = "2024"
authors = ["Santosh Shrestha <santoshxshrestha@gmail.com> "]
description = "Tool that scans open TCP ports locally and runs a proxy server forwarding requests to the detected service."
license = "MIT"
repository = "https://github.com/santoshxshrestha/voxlan"
homepage = "https://github.com/santoshxshrestha/voxlan"
documentation = "https://github.com/santoshxshrestha/voxlan#readme"
readme = "README.md"

[dependencies]
actix-web = "4.11.0"
clap = { version = "4.5.39", features = ["derive"] }
qr2term = "0.3.3"
reqwest = { version = "0.12.19", features = ["json"] }
tokio = { version = "1.45.1", features = ["full"] }
